--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,12 +1,13 @@
 <div id="<%= dom_id course %>">
   <p>
-    <strong>Name:</strong>
-    <%= course.name %>
+    <strong>Prefix:</strong>
+    <%= course.prefix.prefix %>
   </p>
 
   <p>
     <strong>Number:</strong>
     <%= course.number %>
   </p>
+  
 
 </div>
