--- a/app/views/prefixes/_prefix.html.erb
+++ b/app/views/prefixes/_prefix.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id prefix %>">
   <p>
     <strong>Prefix:</strong>
-    <%= prefix.Prefix %>
+    <%= prefix.prefix %>
   </p>
 
 </div>
