--- a/app/views/sections/_section.html.erb
+++ b/app/views/sections/_section.html.erb
@@ -1,7 +1,27 @@
 <div id="<%= dom_id section %>">
   <p>
+    <strong>Section:</strong>
+    <%= section.section %>
+  </p>
+
+  <p>
+    <strong>Semester:</strong>
+    <%= section.semester_id %>
+  </p>
+
+  <p>
+    <strong>Course:</strong>
+    <%= section.course %>
+  </p>
+
+  <p>
+    <strong>References:</strong>
+    <%= section.references %>
+  </p>
+
+  <p>
     <strong>Crn:</strong>
-    <%= section.CRN %>
+    <%= section.crn %>
   </p>
 
 </div>
