--- a/app/views/semesters/_form.html.erb
+++ b/app/views/semesters/_form.html.erb
@@ -12,6 +12,11 @@
   <% end %>
 
   <div>
+    <%= form.label :semster, style: "display: block" %>
+    <%= form.text_field :semster %>
+  </div>
+
+  <div>
     <%= form.label :year, style: "display: block" %>
     <%= form.number_field :year %>
   </div>
