--- a/app/views/semesters/_semester.html.erb
+++ b/app/views/semesters/_semester.html.erb
@@ -1,5 +1,10 @@
 <div id="<%= dom_id semester %>">
   <p>
+    <strong>Semster:</strong>
+    <%= semester.semster %>
+  </p>
+
+  <p>
     <strong>Year:</strong>
     <%= semester.year %>
   </p>
