--- a/app/views/prefixes/_form.html.erb
+++ b/app/views/prefixes/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div>
-    <%= form.label :Prefix, style: "display: block" %>
-    <%= form.text_field :Prefix %>
+    <%= form.label :prefix, style: "display: block" %>
+    <%= form.text_field :prefix %>
   </div>
 
   <div>
