--- a/app/views/sections/_section.html.erb
+++ b/app/views/sections/_section.html.erb
@@ -5,19 +5,16 @@
   </p>
 
   <p>
-    <strong>Semester:</strong>
-    <%= section.semester_id %>
+   <strong>Semester:</strong>
+    <%= section.semester.semster %>
   </p>
 
   <p>
     <strong>Course:</strong>
-    <%= section.course %>
+    <%= section.course.course %>
   </p>
 
-  <p>
-    <strong>References:</strong>
-    <%= section.references %>
-  </p>
+
 
   <p>
     <strong>Crn:</strong>
